[BZ #9720]

* sysdeps/unix/sysv/linux/bits/resource.h (enum __rusage_who): Avoid 
comma after RUSAGE_CHILDREN if not -D_GNU_SOURCE. 
* sysdeps/unix/sysv/linux/sparc/bits/resource.h (enum __rusage_who): 
Likewise.
2009-01-08  Jakub Jelinek  <jakub@redhat.com>

	[BZ #9720]
	* sysdeps/unix/sysv/linux/bits/resource.h (enum __rusage_who): Avoid
	comma after RUSAGE_CHILDREN if not -D_GNU_SOURCE.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h (enum __rusage_who):
	Likewise.